# domainwatch

./: .gitignore  Cargo.toml  README.md  default.nix
src/: discord.rs  main.rs
