[package]
name = "domainwatch"
version = "0.1.0"
edition = "2024"

[dependencies]
jiff = "0.2.23"
rdap = "0.2.0"
reqwest = { version = "0.13.2", features = ["json"] }
serde = "1.0.228"
serde_json = {version  = "1.0.149", features = ["preserve_order"] }
similar = "2.7.0"
tokio = { version = "1.50.0", features = ["full"] }
